# aiogram-mongo-template

./: .env.ren  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  loader.py  main.py  pyproject.toml  redis.conf  requirements.txt
app/: routers.py
app/commands/: __init__.py  admins.py  default.py
app/filters/: __init__.py  status.py
app/handlers/: __init__.py  error.py
app/handlers/admins/: __init__.py  users.py
app/handlers/users/: __init__.py  lang.py  start.py
app/keyboards/: __init__.py  lang.py  lang_markup.py
app/middlewares/: __init__.py  admin.py  i18n.py  inter.py  logging.py  user.py
data/: config.py
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
data/logs/: log.out
database/: __init__.py
database/models/: __init__.py  base.py  user.py
database/services/: __init__.py  users.py
utils/: __init__.py  logging.py
