[tool.poetry]
name = "aiogram-bot"
version = "0.1.0"
description = ""
authors = ["WebShining <webshinings@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram_mongo_template"}]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
aiogram = "3.0.0b5"
redis = "^4.3.4"
motor = "^3.1.1"
pydantic = "^1.10.2"
tornado = "^6.2"
babel = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
