[tool.poetry]
name = "aiogram-mongo-template"
version = "0.1.0"
description = ""
authors = ["WebShining <webshinings@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram_mongo_template"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
babel = "^2.12.1"
environs = "^9.5.0"
motor = "^3.1.2"
pydantic = "^1.10.8"
pytz = "^2023.3"
redis = "^4.5.5"
tornado = "^6.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
